# doodle

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_example.sh  dbuild.sh  doodle.py  drun.sh  imgui.ini
doodle/: CMakeLists.txt  doodle.h
doodle/core/: doodle_app.c  doodle_app.h  doodle_debug.h  doodle_modules.c  doodle_modules.h  doodle_platform.c  doodle_platform.h
doodle/core/modules/: doodle_input.h  doodle_renderer.c  doodle_renderer.h  doodle_text.h
doodle/core/util/: doodle_math.c  doodle_math.h
doodle/core/util/dsa/: doodle_container.h  doodle_list.h
doodle/include/: doodle_app.c  doodle_app.h  doodle_display.h  doodle_input.h  doodle_math.c  doodle_platform.h  doodle_text.h
examples/blank/: CMAKELists.txt  blank.c  blank.cmake  doodle.cmake
scripts/: doodle.py  doodle_install.sh  doodle_setup.py
scripts/tools/: doodle_bob.py  doodle_index.py  tool_utils.py
scripts/tools/doodle_build/: doodle_build.py  platform.py
scripts/tools/doodle_create/project_template/: .gitignore  doodle.cmake
scripts/tools/doodle_ops/: build_util.py  doodle_br.py  doodle_build.py  doodle_clean.py  doodle_run.py  ops_common.py  platform.py
tools/: doodle_build.py  doodle_run.sh  doodle_update.py  tool_utils.py
tools/doodle_build/: build_util.py  doodle_build.py  doodle_run.sh  platform.py
tools/doodle_create/: doodle_create.py
